deploy/bpc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: futuregadgetlabx
  name: bit-particle-cannon
spec:
  selector:
    app: bit-particle-cannon
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
