deploy/bpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bit-particle-cannon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: futuregadgetlabx.com
      http:
        paths:
          - path: /bpc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bit-particle-cannon
                port:
                  number: 8081
